# IKRA

./: .project
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_arm_control/lib/robot_arm_control/: robot_arm_node
install/robot_arm_control/share/ament_index/resource_index/package_run_dependencies/: robot_arm_control
install/robot_arm_control/share/ament_index/resource_index/parent_prefix_path/: robot_arm_control
install/robot_arm_control/share/robot_arm_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_arm_control/share/robot_arm_control/cmake/: robot_arm_controlConfig-version.cmake  robot_arm_controlConfig.cmake
install/robot_arm_control/share/robot_arm_control/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build  latest_list
src/robot_arm_control/: CMakeLists.txt  package.xml
src/robot_arm_control/src/: dh_parameters.xml  robot_arm_node.cpp
